205 - Fix spacing in v2-media-with-text

--- a/blocks/v2-media-with-text/v2-media-with-text.css
+++ b/blocks/v2-media-with-text/v2-media-with-text.css
@@ -122,10 +122,6 @@
 
 /* Variant: media-gallery */
 
-.section.v2-media-with-text-container .v2-media-with-text-wrapper {
-  padding: 0;
-}
-
 .v2-media-with-text--media-gallery {
   --media-gallery-gap: 8px;
   --media-gallery-container-margin: 16px;
@@ -159,19 +155,17 @@
   scroll-snap-align: center;
   width: calc(100% - var(--media-gallery-container-margin) - var(--media-gallery-gap));
   max-width: var(--media-gallery-max-image-width);
-  aspect-ratio: 7 / 5;
   flex-shrink: 0;
   margin: 0;
   position: relative;
 }
 
-.v2-media-with-text--media-gallery .v2-media-with-text__media-section figure:has(figcaption) {
-  margin-bottom: 24px;
+.v2-media-with-text--media-gallery .v2-media-with-text__media-section picture {
+  aspect-ratio: 7 / 5;
 }
 
 .v2-media-with-text--media-gallery .v2-media-with-text__media-section figcaption {
   font-size: var(--f-subtitle-2-font-size);
-  margin: 8px 0 24px;
 }
 
 .v2-media-with-text--media-gallery .v2-media-with-text__content-section {
@@ -181,7 +175,7 @@
   max-width: calc(var(--text-block-max-width) + var(--media-gallery-container-margin));
   margin: auto;
   text-align: center;
-  padding: 64px 16px 0;
+  padding: 40px 16px 0;
 }
 
 .v2-media-with-text--media-gallery .v2-media-with-text__content-section .v2-media-with-text__pretitle {
@@ -203,6 +197,7 @@
 .v2-media-with-text--media-gallery .v2-media-with-text__media-section .v2-media-with-text__media {
   width: 100%;
   height: 100%;
+  margin-bottom: 8px;
 }
 
 @media (min-width: 744px) {
@@ -334,7 +329,7 @@
 
     flex-direction: row-reverse;
     align-items: flex-start;
-    padding: 80px 0;
+    padding: 56px 0 0;
   }
 
   .v2-media-with-text--media-gallery .v2-media-with-text__content-section {
@@ -352,7 +347,7 @@
     font-size: var(--f-heading-3-font-size);
     margin-bottom: 8px;
   }
-
+  
   .v2-media-with-text--media-gallery .v2-media-with-text__media-section figcaption {
     font-size: var(--f-subtitle-1-font-size);
   }
